# mbay-to-french-NMT

./: .gitignore  README.md  mbay-nmt.code-workspace  mbay-translator.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sst.config.ts  tsconfig.json
.prepare_mbay_nmt/: .gitignore
.prepare_mbay_nmt/bases/mbay_nmt/fine_tune_t5_family/: __init__.py  train.py
.prepare_mbay_nmt/bases/mbay_nmt/merge_adapter_weights/: __init__.py  core.py
.prepare_mbay_nmt/components/mbay_nmt/training/: core.py
.prepare_mbay_nmt/components/mbay_nmt/utils/: serializers.py
.prepare_mbay_nmt/development/preprocessing/: dataprep.ipynb  dataset_upload.ipynb  reviewdata.ipynb
.prepare_mbay_nmt/development/training/: train_t5_family.ipynb
.prepare_mbay_nmt/projects/run_fine_tune_t5_family/: pyproject.toml  requirements.txt
notes/: PLAN.md  T5.md
py/: pyproject.toml  workspace.toml
py/bases/mbay-nmt/train_t5/: __init__.py  run.py
py/bases/mbay_nmt/fine_tune_mt5/: train.py  utils.py
py/bases/mbay_nmt/fine_tune_t5/: run.py  train.py  utils.py
py/components/mbay-nmt/training/: __init__.py
py/components/mbay-nmt/utils/: __init__.py  merge_adapter_weights.py
py/components/mbay-translation/preprocessing/: __init__.py
py/components/mbay_nmt/preprocessing/: t5.py
py/components/mbay_nmt/training/: core.py
py/components/mbay_nmt/utils/: domain.py  models.py
py/datasets/: mbay-translations-flattened.csv.gzip
py/development/preprocessing/: dataprep.ipynb  dataset_tokenize_byt5.ipynb  dataset_upload.ipynb
py/development/training/: test_t5.ipynb  train_t5.ipynb  train_t5_family.ipynb
py/projects/run_fine_tune_mt5/: pyproject.toml  run.py
py/projects/run_fine_tune_t5/: pyproject.toml  requirements.txt  run.py
py/projects/train_t5/: pyproject.toml  requirements.txt  run.py
py/test/bases/mbay-translation/train_t5/: test_core.py
py/test/bases/mbay_nmt/merge_adapter_weights/: test_core.py
py/test/components/mbay-translation/preprocessing/: test_core.py
py/test/components/mbay-translation/training/: test_core.py
py/test/components/mbay-translation/utils/: test_core.py
ts/core/: package.json
ts/functions/: package.json  tsconfig.json
